smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/mixins/mixins-with-member-override-3.flattened.smithy
$version: "2.0"

namespace com.amazon.example

structure Valid {
    @private
    @required
    @tags([
        "c"
    ])
    a: String
    c: Integer
}

