smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/operations/invalid-operation-properties.smithy
// Parse error at line 6, column 7
$version: "2.0"
namespace com.example

operation Operation {
    invalidOperationKey: String
}
